force-app/main/default/objects/hed__Affl_Mappings__c/hed__Affl_Mappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Mappage d’affiliation</label>
</CustomObject>