force-app/main/default/objects/hed__Affl_Mappings__c/fields/hed__Auto_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>hed__Auto_Program_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, a Program Enrollment record is auto created when a user creates an Affiliation record with an Account of this record type.</description>
    <inlineHelpText>Si cette option est sélectionnée, un enregistrement Inscription au programme est automatiquement créé lorsqu&apos;un utilisateur crée un enregistrement Affiliation avec un compte de ce type d&apos;enregistrement.</inlineHelpText>
    <label>Auto Enrollment</label>
    <type>Checkbox</type>
</CustomField>