force-app/main/default/objects/hed__Affl_Mappings__c/fields/hed__Auto_Program_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Auto_Program_Enrollment_Status__c</fullName>
    <description>The status to set on the Program Enrollment record that&apos;s automatically created if Auto Program Enrollment is selected.</description>
    <inlineHelpText>Le statut à définir dans l&apos;enregistrement Inscription au programme qui est automatiquement créé si Inscription automatique au programme est sélectionnée.</inlineHelpText>
    <label>Auto Enrollment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>