force-app/main/default/objects/hed__Affl_Mappings__c/fields/hed__Primary_Affl_Field__c.field-meta.xml
<CustomField>
    <fullName>hed__Primary_Affl_Field__c</fullName>
    <description>The label of the Contact field that holds the value of the primary Account for this record type.</description>
    <inlineHelpText>L&apos;étiquette du champ Contact qui contient la valeur du compte principal de ce type d&apos;enregistrement.</inlineHelpText>
    <label>Primary Affl Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>